<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!-- Title for the application. [CHAR LIMIT=12] -->
    <string name="app_name">Just Java</string>

    <!-- Hint text display in the empty field for the user's name [CHAR LIMIT=20] -->
    <string name="name_edit_text">Name</string>

    <!-- Hint text display in the empty field for the user's name [CHAR LIMIT=20] -->
    <string name="toppings">Toppings</string>

    <!-- Hint text display in the empty field for the user's name [CHAR LIMIT=20] -->
    <string name="whipped_cream">Whipped Cream</string>

    <!-- Hint text display in the empty field for the user's name [CHAR LIMIT=20] -->
    <string name="chocolate">Chocolate</string>

    <!-- Hint text display in the empty field for the user's name [CHAR LIMIT=20] -->
    <string name="quantity">Quantity</string>

    <!-- Hint text display in the empty field for the user's name [CHAR LIMIT=5] -->
    <string name="initial_quantity_value">1</string>

    <!-- Hint text display in the empty field for the user's name [CHAR LIMIT=20] -->
    <string name="order">Order</string>

    <!--
        Subject line for the order summary email. It will be in the format of
        "Just Java order for Chris" where Chris is the user's name. [CHAR LIMIT=NONE]
    -->
    <string name="order_summary_email_subject">Just.Java order for <xliff:g id="name" example="Chris">%1$s</xliff:g></string>

    <!--
        Toast message. It will be shown when a user try to take more than
        100 coffees. [CHAR LIMIT=NONE]
     -->
    <string name="toast_message_1">You cannot have more than 100 coffees.</string>


    <!--
        Toast message. It will be shown when a user try to take less than
        one coffee. [CHAR LIMIT=NONE]
    -->
    <string name="toast_message_2">You cannot have less than 1 coffee.</string>

    <!--
        Name for the order summary. It will be shown in the format of "Name: Chris" where Chris is the
        user's name. [CHAR LIMIT=NONE]
    -->
    <string name="order_summary_name">Name: <xliff:g id="name" example="Amy">%s</xliff:g></string>

    <!--
    Whipped cream topping for the order summary. It will be shown in the format of
    "Add whipped cream? true" or "Add whipped cream? false". [CHAR LIMIT=NONE]
    -->
    <string name="order_summary_whipped_cream">Add whipped cream? <xliff:g id="addWhippedCream" example="true">%b</xliff:g></string>

    <!--
        Chocolate topping for the order summary. It will be shown in the format of
        "Add chocolate? true" or "Add chocolate? false". [CHAR LIMIT=NONE]
    -->
    <string name="order_summary_chocolate">Add chocolate? <xliff:g id="addChocolate" example="true">%b</xliff:g></string>

    <!--
        Quantity of coffee cups for the order summary. It will be shown in the format of
        "Quantity: 1", where 2 is the number of cups ordered. [CHAR LIMIT=NONE]
    -->
    <string name="order_summary_quantity">Quantity: <xliff:g id="quantity" example="1">%d</xliff:g></string>

    <!--
        Total price for the order summary. It will be shown in the format of
        "Total: $10" where 5 is the price. [CHAR LIMIT=NONE]
    -->
    <string name="order_summary_price">Total: $ <xliff:g id="price" example="5">%d</xliff:g></string>

    <!-- Thank you message for the order summary. [CHAR LIMIT=NONE] -->
    <string name="thank_you">Thank you!</string>

</resources>
